# rabukasim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  IMPLEMENTATION_NOTES.md  OVERENGINEERING.md  QA_PHASE_2_COMPLETION_REPORT.md  QA_SESSION_20260311_COMPLETION.md  README.md  TIMING_ANALYSIS.md  add_tests.py  bug5_verify.txt  bug5_verify_2.txt  card_126_full.txt  card_126_utf8.txt  card_418.txt  card_461.txt  card_462.txt  card_537.txt  card_580.txt  card_590.txt  card_debug.txt  card_verify.txt  check_q146.py  debug_card_579_bytecode.py  debug_umi.py  detailed_qa_test_plans.md  err_utf8.txt  find_umi.py  fix.py  fix_test.py  full_profile_out.txt  generate_detailed_qa_plans.py  generate_qa_plans.py  generate_qa_plans_detailed.py  kanan_data.txt  kanan_data_utf8.txt  kanon_data.txt  kanon_data_utf8.txt  (+42 more)
ai/: OPTIMIZATION_IDEAS.md  TRAINING_INTEGRATION_GUIDE.md  headless_runner.py  overnight_evolution.py  vanilla_deck.md  verify_search_agent.py
alphazero/: alphanet.py  bench_debug.txt  bench_debug_utf8.txt  bench_out.txt  card_459.txt  (+24 more)
engine_rust_src/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  TEST_ORGANIZATION.md  build.bat  cargo_check_txt  check.json  check_519.py  check_519_bc.py  check_colors.py  compile_fixes.md  debug_concatenated_shader.wgsl  errors.json  extract_results.py  fix_tests.py  heuristic_log.csv  pyproject.toml  sequencer_config.json  tmp_test_decode.rs  tune_sequencer.py
engine_rust_src/.cargo/: config.toml
engine_rust_src/data/: scenarios.json
engine_rust_src/examples/: print_sizes.rs
engine_rust_src/src/: ability_tests.rs  alphazero_verification_tests.rs  archetype_runner.rs  baton_pass_tests.rs  card_interaction_tests.rs  comprehensive_tests.rs  count_group_tests.rs  coverage_gap_tests.rs  database_tests.rs  debug_consts.rs  debug_q203.rs  deck_refresh_tests.rs  enforcement_tests.rs  filter_audit_tests.rs  game_end_tests.rs  game_flow_tests.rs  gpu_parity_tests.rs  gpu_smoke_tests.rs  last_errors.txt  lib.rs  manual_verification_tests.rs  mechanics_tests.rs  meta_rule_card_tests.rs  meta_rule_tests.rs  mutation_spots.txt  new_opcode_tests.rs  opcode_coverage_gap_2.rs  opcode_missing_tests.rs  opcode_rigor_tests.rs  opcode_tests.rs  parity_tests.rs  phase_transition_tests.rs  py_bindings.rs  qa_missing_tests.rs  qa_verification_tests.rs  regression_tests.rs  repro_bp3_002_p.rs  repro_bp4_002_p.rs  repro_card_fixes.rs  repro_color_filter.rs  (+26 more)
engine_rust_src/src/core/: alphazero_encoding.rs  alphazero_encoding_vanilla.rs  alphazero_evaluator.rs  combined_shader.wgsl  enums.rs  generated_constants.rs  generated_layout.rs  gpu_conversions.rs  gpu_manager.rs  gpu_semantic_bridge.rs  gpu_state.rs  hardcoded.rs  hardcoded_cards.rs  hearts.rs  heuristics.rs  logic.rs  logic_git_head_backup.rs  mcts.rs  mod.rs  models.rs  shader.wgsl  shader_constants.wgsl  shader_core.wgsl  shader_helpers.wgsl  shader_heuristic.wgsl  shader_heuristic_pure.wgsl  shader_main.wgsl  shader_rules.wgsl  shader_types.wgsl
engine_rust_src/src/core/analysis/: mod.rs  performance_solver.rs  pro_vision.rs
engine_rust_src/src/core/logic/: action_factory.rs  ai_encoding.rs  card_db.rs  constants.rs  diagnostics.rs  execution.rs  filter.rs  game.rs  game_action_processor.rs  game_logging.rs  game_rules_ext.rs  game_setup.rs  game_trigger.rs  handlers.rs  interpreter.rs  interpreter_legacy.rs  models.rs  performance.rs  performance_allocation.rs  performance_requirements.rs  player.rs  rules.rs  shader_constants.wgsl  standard_state.rs  state.rs  turn_sequencer.rs
engine_rust_src/src/core/logic/action_gen/: active_draw.rs  live_set.rs  main_phase.rs  mod.rs  mulligan.rs  response.rs
engine_rust_src/src/core/logic/interpreter/: conditions.rs  constants.rs  costs.rs  filter.rs  handlers.rs  instruction.rs  logging.rs  mod.rs  suspension.rs
engine_rust_src/src/core/logic/interpreter/handlers/: deck_zones.rs  draw_hand.rs  energy.rs  flow.rs  interaction.rs  member_state.rs  meta_control.rs  mod.rs  movement.rs  score_hearts.rs  state.rs
engine_rust_src/src/qa/: batch_1.rs  batch_2.rs  batch_3.rs  batch_4_unmapped_qa.rs  batch_card_specific.rs  batch_card_specific_real_gaps.rs  baton_touch_tests.rs  card_specific_ability_tests.rs  comprehensive_qa_suite.rs  drafts.rs  mod.rs  test_card_specific_gaps.rs  test_critical_gaps.rs  test_missing_gaps.rs  test_qa_final_gaps.rs  test_qa_integrations.rs  test_rule_gaps.rs
engine_rust_src/src/repro/: benchmark_sequencer.rs  c01_sumire_8752.rs  card_579_verification.rs  cost_dependency_repro.rs  crash_triage.rs  fix_kimi_no_kokoro.rs  karin_repro.rs  mini_engine_tests.rs  mod.rs  movement_parity_tests.rs  on_leaves_repro.rs  repro_bp3_002_p.rs  repro_card_103_placement.rs  repro_card_420_cost_sum.rs  repro_card_420_multi_pick.rs  repro_card_4654_hand_bug.rs  repro_card_560_double_baton.rs  repro_card_fixes.rs  repro_card_pb1_001_r.rs  repro_color_filter.rs  repro_flags.rs  repro_hazuki_500.rs  repro_performance_modal.rs  repro_score_jump.rs  repro_softlock_tests.rs  repro_sumire_8752_trigger.rs  repro_task.rs  size_test.rs  special_mechanics_tests.rs  test_card_4558.rs  yell_persistence_repro.rs
engine_rust_src/src/tools/: update_logic.py
engine_rust_src/tests/: ORGANIZATION.md  c01_sumire_8752.rs  c02_kanon_557.rs  mod.rs  qa_verification_tests.rs  repro_bp4_001.rs  repro_bp4_001_baton_pass.rs  repro_bp4_004_double_baton.rs  repro_card_selection.rs  repro_catchu_q103.rs  repro_count_success_live.rs  repro_hime_rurino.rs  repro_kanon_4684.rs  repro_keke_live_filter.rs  repro_pb1_018_exhaustive.rs  repro_wait_bug.rs
engine_rust_src/tools_internal/: parse_report.py
launcher/: Cargo.toml  action_buttons_exhaustive.json  action_buttons_exhaustive.txt  action_buttons_unique.json  build.rs  build_output_2.txt  build_output_3.txt  build_output_4.txt  build_output_5.txt  build_output_redo.txt  cargo_check_results.txt  compile_debug.bat  fix_suspend.py  launcher_warnings.txt
launcher/src/: lib.rs  main.rs  models.rs  serialization.rs  utils.rs
launcher/src/handlers/: api.rs  mod.rs  static_files.rs
(+1987 files in other folders)
