[package]
name = "engine_rust"
version = "0.1.2"
edition = "2021"

[lib]
name = "engine_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
ort = { version = "2.0.0-rc.9", features = ["ndarray"], optional = true }
ndarray = "0.16"
rayon = { version = "1.10", optional = true }
numpy = { version = "0.23", optional = true }
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3-py37", "multiple-pymethods"], optional = true }
rand = { version = "0.9.0", features = ["small_rng"] }
rand_pcg = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
lru = "0.13"
serde_json = "1.0"
serde_repr = "0.1"
bincode = "1.3"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

serde-wasm-bindgen = "0.6"
once_cell = "1.19"
smallvec = { version = "1.13", features = ["serde", "union", "const_generics", "write"] }

[features]
extension-module = ["dep:pyo3", "dep:numpy", "pyo3/extension-module"]
parallel = ["dep:rayon"]
nn = ["dep:ort"]
gpu = []
default = ["parallel"]

[profile.dev]
opt-level = 2

[profile.release]
lto = false
codegen-units = 256
panic = 'abort'
opt-level = 3

[[test]]
name = "repro_card_4654_hand_bug"
path = "src/repro/repro_card_4654_hand_bug.rs"
